--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     can.width = window.innerWidth;
     can.height = window.innerHeight;
 
-    var c = can.getContext('webgl',  { alpha: false });
+    var c = can.getContext('webgl');
     var w = c.drawingBufferWidth;
     var h = c.drawingBufferHeight;
 
