--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 <body>
   <canvas id="board"></canvas>
   <script type="text/frag-shader" id="frag">
-    #define max_distance 20.0
+    #define max_distance 25.0
     #define epsilon 0.005
-    #define max_steps 25
+    #define max_steps 30
     #define FOV 75.0
 
     precision mediump float;
     uniform vec2 resolution;
     uniform float t;
+
+
+    float floor_obj(vec3 p) {
+      return p.y + 6.0;
+    }
 
     float sphere(vec3 p, float s){
       return length(p) - s;
@@ -40,11 +45,23 @@
     }
 
     float scene(vec3 point) {
-      vec3 p = rep(point, vec3(2,2,2));
-      return smin(
-        smin(sphere(p, 0.5), box(p, vec3(1.0, 0.01, 0.1)), 24.0),
-        box(p, vec3(0.01, 1.0, 0.1)), 24.0);
+      vec3 p = rep(point, vec3(2,2,4));
+      return min(
+        smin(
+          smin(sphere(p, 0.5), box(p, vec3(1.0, 0.01, 0.1)), 24.0),
+          box(p, vec3(0.01, 1.0, 0.1)), 24.0),
+        floor_obj(point));
     }
+
+    vec3 get_normal(vec3 point) {
+      float d0 = scene(point);
+      float dX = scene(point - vec3(epsilon, 0.0, 0.0));
+      float dY = scene(point - vec3(0.0, epsilon, 0.0));
+      float dZ = scene(point - vec3(0.0, 0.0, epsilon));
+
+      return normalize(vec3(dX - d0, dY - d0, dZ - d0));
+    }
+
 
     float raymarch(vec3 ray_origin, vec3 ray_direction) {
       float d = 0.0;
@@ -60,6 +77,7 @@
     }
 
     void main() {
+      float time = t / 1000.0;
       vec2 uv = ((2.0 * gl_FragCoord.xy) - resolution) / min(resolution.x, resolution.y);
       uv *= tan(radians(FOV) / 2.0);
 
@@ -68,11 +86,21 @@
       vec3 right = cross(up, forward);
 
       vec3 ray_dir = normalize(up * uv.y + right * uv.x + forward);
-      float d = raymarch(vec3(0, sin(t * 0.0008) * 0.8, -5. + (t * 0.0008)), ray_dir);
+      vec3 eye = vec3(0, sin(time * 0.8) * 0.8, -5. + (time * 0.8));
+      float d = raymarch(eye, ray_dir);
+
+      vec3 point = eye + ray_dir * d;
+      vec3 point_normal = get_normal(point);
+      vec3 light = eye + vec3(
+        sin(time) * 55.0,
+        cos(time) * 44.0,
+        -15.0);
+      vec3 light_dir = -normalize(light - point);
+      float dotp_diffuse = max(0.0, dot(light_dir, point_normal)) * 0.8;
 
       if (d < max_distance) {
         float fog = 1.0 / (d / max_distance / 0.15);
-        gl_FragColor = vec4(0.3, 0.6, 0.6, 1.0) * fog;
+        gl_FragColor = vec4(0.3, 0.6, 0.6, 1.0) * dotp_diffuse * fog;
       } else {
         gl_FragColor = vec4(0, 0, 0, 1);
       }
