--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 <body>
   <canvas id="board"></canvas>
   <script type="text/frag-shader" id="frag">
-    #define max_distance 25.0
-    #define epsilon 0.005
-    #define max_steps 30
-    #define FOV 75.0
+    #define max_distance 50.0
+    #define epsilon 0.001
+    #define max_steps 100
+    #define FOV 20.0
 
     precision mediump float;
     uniform vec2 resolution;
     uniform float t;
 
+    float rand(vec2 co){
+      return fract(sin(dot(co.xy, vec2(12.9898,78.233))) * 43758.5453);
+    }
 
     float floor_obj(vec3 p) {
       return p.y + 6.0;
@@ -45,11 +48,13 @@
     }
 
     float scene(vec3 point) {
-      vec3 p = rep(point, vec3(2,2,4));
+      vec3 p = rep(point, vec3(2,2, 7));
       return min(
         smin(
-          smin(sphere(p, 0.5), box(p, vec3(1.0, 0.01, 0.1)), 24.0),
-          box(p, vec3(0.01, 1.0, 0.1)), 24.0),
+          smin(
+            smin(sphere(p, 0.25), box(p, vec3(1.0, 0.01, 0.1)), 24.0),
+            box(p, vec3(0.01, 1.0, 0.1)), 24.0),
+          box(p, vec3(0.1, 0.01, 3.5)), 24.0),
         floor_obj(point));
     }
 
@@ -86,15 +91,15 @@
       vec3 right = cross(up, forward);
 
       vec3 ray_dir = normalize(up * uv.y + right * uv.x + forward);
-      vec3 eye = vec3(0, sin(time * 0.8) * 0.8, -5. + (time * 0.8));
+      vec3 eye = vec3(cos(time * 0.1) * 0.8, sin(time * 0.2) * 0.8, (time * 4.0));
       float d = raymarch(eye, ray_dir);
 
       vec3 point = eye + ray_dir * d;
       vec3 point_normal = get_normal(point);
       vec3 light = eye + vec3(
-        sin(time) * 55.0,
-        cos(time) * 44.0,
-        -15.0);
+        sin(time / 1.0) * 55.0,
+        0,//cos(time  / 3.0) * 44.0,
+        0);
       vec3 light_dir = -normalize(light - point);
       float dotp_diffuse = max(0.0, dot(light_dir, point_normal)) * 0.8;
 
@@ -102,7 +107,12 @@
         float fog = 1.0 / (d / max_distance / 0.15);
         gl_FragColor = vec4(0.3, 0.6, 0.6, 1.0) * dotp_diffuse * fog;
       } else {
-        gl_FragColor = vec4(0, 0, 0, 1);
+        float r = length(rand(uv));
+        if (r > 0.997) {
+          gl_FragColor = vec4(1, 1, 1, 1) * (r / 2.);
+        } else {
+          gl_FragColor = vec4(0, 0, 0, 1);
+        }
       }
     }
   </script>
