--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     }
 
     float scene(vec3 point) {
-      vec3 p = rep(point, vec3(2,2, 7));
+      vec3 p = rep(point, vec3(2, 2, 2));
       return min(
         smin(
-          smin(
-            smin(sphere(p, 0.25), box(p, vec3(1.0, 0.01, 0.1)), 24.0),
-            box(p, vec3(0.01, 1.0, 0.1)), 24.0),
-          box(p, vec3(0.1, 0.01, 3.5)), 24.0),
+          //smin(
+            //smin(sphere(p, 0.25), box(p, vec3(1.0, 0.01, 0.1)), 24.0),
+            box(p, vec3(0.01, 0.2, 0.01)),//, 24.0),
+          box(p, vec3(0.1, 0.03, 0.5)), 24.0),
         floor_obj(point));
     }
 
@@ -68,11 +68,11 @@
     }
 
 
-    float raymarch(vec3 ray_origin, vec3 ray_direction) {
+    float raymarch(vec3 origin, vec3 direction) {
       float d = 0.0;
 
       for (int i = 0; i < max_steps; i++) {
-        vec3 new_point = ray_origin + ray_direction * d;
+        vec3 new_point = origin + direction * d;
         float s = scene(new_point);
         if (s < epsilon) return d;
         d += s;
@@ -94,17 +94,19 @@
       vec3 eye = vec3(cos(time * 0.1) * 0.8, sin(time * 0.2) * 0.8, (time * 4.0));
       float d = raymarch(eye, ray_dir);
 
-      vec3 point = eye + ray_dir * d;
-      vec3 point_normal = get_normal(point);
-      vec3 light = eye + vec3(
-        sin(time / 1.0) * 55.0,
-        cos(time  / 3.0) * 44.0,
-        0);
-      vec3 light_dir = -normalize(light - point);
-      float dotp_diffuse = max(0.0, dot(light_dir, point_normal)) * 0.8;
-
       if (d < max_distance) {
+        // Light
+        vec3 point = eye + ray_dir * d;
+        vec3 point_normal = get_normal(point);
+        vec3 light = eye + vec3(
+          sin(time / 1.0) * 55.0,
+          cos(time  / 3.0) * 44.0,
+          0);
+        vec3 light_dir = -normalize(light - point);
+        float dotp_diffuse = max(0.0, dot(light_dir, point_normal)) * 0.8;
+
         float fog = 1.0 / (d / max_distance / 0.1);
+
         gl_FragColor = vec4(0.3, 0.6, 0.6, 1.0) * dotp_diffuse * fog;
       } else {
         float r = length(rand(uv));
@@ -178,10 +180,7 @@
 
     function loop (t) {
       requestAnimationFrame(loop);
-
-      //c.clearColor(0, 0, 0, 1);
       c.clear(c.COLOR_BUFFER_BIT);
-
       c.uniform1f(time, t);
       c.drawArrays(c.TRIANGLES, 0, 6);
     }
